--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
 <body>
     <center>
        <h1 class="welcome">Welcome To My website</h1>
-       <h3 class="top">I am <span>"Imros Arefen"</span></h3>
+       <h3 class="top">I am <span>"James Ndiritu"</span></h3>
         <img src="PicsArt_01-06-10-removebg-preview%20(1).png">
         <h1>About myself</h1>
         <hr>
-        <p>Hello, My name is imros.I am a web developer.Sodales iaculis est Scelerisque sociis magna dolor pulvinar magnis. Varius praesent suscipit. Donec morbi feugiat placerat gravida porttitor natoque nonummy parturient posuere. Magnis suspendisse parturient. Magna ultricies nostra nunc magna. Sodales etiam arcu suscipit, mollis. Aenean</p>
+        <p>Hello, My name is James Ndiritu.I am a web developer. so I starts this job when I was a grown up that is why I love it with all of my heart</p>
         <br>
         <br>
         <div class="info">
         <h1>CONTACT US</h1>
-     <b>Name:</b> Imros Arefen <br>
-     <b>Email:</b> imros@gmail.com
+     <b>Name:</b> James Ndiritu<br>
+     <b>Email:</b> gitaujay5208@gmail.com
      <br><br>
-     <b>Phone:   </b>01782432507 <br>
-     <b>Date of Birth: </b>  24 December 2000
+     <b>Phone:   </b>+254769055457 <br>
+     <b>Date of Birth: </b>  24 August 2000
      <br>
      <br>
      
-       <b>School:</b> Khepupara Model High secool |
-     <b>Collage:</b> Mojaher Uddin Govt College
+       <b>School:</b> Milimani Highschool |
+     <b>Collage:</b> Nyandarua national
     </div>
     <br>
     <br>
